--- a/_notebooks/2020-07-09-wxbs.ipynb
+++ b/_notebooks/2020-07-09-wxbs.ipynb
@@ -28,7 +28,9 @@
     "\n",
     "We would also call the correspondence as $c_{jk}$ as \"consistent, but incorrect\" if $O_{j}$ and $O_{k}$ are the observation of the same object $X_i$, but are wrongly attributed to the other object $X_z$.\n",
     "\n",
-    "Let us give a couple of examples. One of the commonly used cases in the current thesis is the following. The objects $X_i$ are 3d coordinates of some point on object surface in real world, the observations $O_{j}^{i}$ are their 2d projections to the camera place, i.e. pixels. The correspondence might be multimodal, as observation $O_{j}^{i}$  might have different nature: RGB image, painting, IR-imaging or LIDAR-scan.\n",
+    "Let us give a couple of examples. The object $X$ is the single CAD model of the car and the observations $O_{j}$ are its blueprints, e.g. 2D projections to the top, front and side views. All the observations form the correspondence set $C$.\n",
+    "\n",
+    "Another example, which is commonly used in the current thesis is the a little bit different. The objects $X_i$ are the cars, but their parts, or, even more fine-grained are 3d coordinates of some point on object surface in real world. Then the observations $O_{j}^{i}$ are their 2d projections to the camera plane, i.e. pixels. The correspondence might be multimodal, as observation $O_{j}^{i}$  might have different nature: RGB image, depth map D, infra-red thermal image, LIDAR-scan or even painting.\n",
     "\n",
     "For example, on image below the object $X_i$ is red circle, observation are blue circles and the correspondences $c_{jk}$ are shown as lines. \n",
     "\n",
@@ -43,8 +45,13 @@
     "\n",
     "We will call \"**wide multiple baseline stereo**\" or **WxBS** \\cite{Mishkin2015WXBS} if the observations have different nature or the conditions under which observation were made are different. \n",
     "\n",
+    "The different between **wide baseline stereo** and **short baseline stereo**, or, simply **stereo** is the follwong. In **stereo** the baseline is small -- less then 1 meter -- and typically known and fixed. The task is to establish correspondences, which can be done by 1D search along the known epipolar lines. \n",
     "\n",
-    "The wide baseline stereo, which also outputs the estimation of $X_i$ in form of 3d world coordinates we would call \"**rigid structure-from-motion**\" or \"**3D reconstruction**\". We do not consider object shape approximation with voxels, meshes, etc in the current thesis. Nor we consider the recovery of scene albedo, illumination, and other appearance properties. \n",
+    "In contrast, in  **wide baseline stereo** the baseline is unknown, mostly unconstrained and the viewpoints of the cameras can vary drastically.\n",
+    " \n",
+    "The wide baseline stereo, which also outputs the estimation of $X_i$ in form of 3d world coordinates we would call \"**rigid structure-from-motion**\" (rigid SfM) or \"**3D reconstruction**\". We do not consider object shape approximation with voxels, meshes, etc in the current thesis. Nor we consider the recovery of scene albedo, illumination, and other appearance properties. \n",
+    "\n",
+    "While the difference between **SfM** and **WBS** is often blurred and the terms are used interchangeably, we would  consider WBS as a part of SfM pipeline prior to recovering 3d point cloud.  \n",
     "\n",
     "\n",
     "![](imgs/wxbs_problems.png \"Example of  WxBS problems\")"
