--- a/_notebooks/biblio.bib
+++ b/_notebooks/biblio.bib
@@ -16,6 +16,34 @@ year="1998",
 pages="78--92",
 }
 
+@ARTICLE{sGLOH2,
+  author={F. {Bellavia} and C. {Colombo}},
+  journal={IEEE Transactions on Pattern Analysis and Machine Intelligence}, 
+  title={Rethinking the sGLOH Descriptor}, 
+  year={2018},
+  volume={40},
+  number={4},
+  pages={931-944}
+}
+ 
+ 
+ @article{IMW2020,
+  title={Image Matching across Wide Baselines: From Paper to Practice},
+  author={Jin, Yuhe and Mishkin, Dmytro and Mishchuk, Anastasiia and Matas, Jiri and Fua, Pascal and Yi, Kwang Moo and Trulls, Eduard},
+  journal={arXiv preprint arXiv:2003.01587},
+  year={2020}
+}
+
+@ARTICLE{RIFT2005,
+  author={S. {Lazebnik} and C. {Schmid} and J. {Ponce}},
+  journal={IEEE Transactions on Pattern Analysis and Machine Intelligence}, 
+  title={A sparse texture representation using local affine regions}, 
+  year={2005},
+  volume={27},
+  number={8},
+  pages={1265-1278}
+}
+  
 @article{musgrave2020metric,
     title={A Metric Learning Reality Check},
     author={Kevin Musgrave and Serge Belongie and Ser-Nam Lim},
@@ -39,7 +67,43 @@ booktitle={ECCV},
 year={1996}
 }
 
- 
+
+
+@inproceedings{perd2006epipolar,
+  title={Epipolar geometry from two correspondences},
+  author={Perd'och, Michal and Matas, Jiri and Chum, Ondrej},
+  booktitle={ICPR},
+  year={2006}
+}
+
+@INPROCEEDINGS{PrittsRANSAC2013,
+  author={J. {Pritts} and O. {Chum} and J. {Matas}},
+  booktitle={2013 28th International Conference on Image and Vision Computing New Zealand (IVCNZ 2013)}, 
+  title={Approximate models for fast and accurate epipolar geometry estimation}, 
+  year={2013}}
+  
+  
+@InProceedings{Barath2019ICCV,
+author = {Barath, Daniel and Kukelova, Zuzana},
+title = {Homography From Two Orientation- and Scale-Covariant Features},
+booktitle = {ICCV},
+year = {2019}
+}
+@INPROCEEDINGS{RANSACAffine2020,
+  author={M. {Rodríguez} and G. {Facciolo} and R. G. {von Gioi} and P. {Musé} and J. {Delon}},
+  booktitle={2020 IEEE Winter Conference on Applications of Computer Vision (WACV)}, 
+  title={Robust estimation of local affine maps and its applications to image matching}, 
+  year={2020}
+}
+  
+  
+@article{barath2020making,
+    title={Making Affine Correspondences Work in Camera Geometry Computation},
+    author={Daniel Barath and Michal Polic and Wolfgang Förstner and Torsten Sattler and Tomas Pajdla and Zuzana Kukelova},
+    year={2020},
+      journal={arXiv preprint arXiv:2007.10032},
+
+}
 @inproceedings{Mishkin2015WXBS,
 	title={WxBS: Wide Baseline Stereo Generalizations},
 	author={Dmytro Mishkin and Jiri Matas and Michal Perdoch and Karel Lenc},
@@ -56,6 +120,16 @@ url={https://hal.inria.fr/file/index/docid/74046/filename/RR-2644.pdf}
 }
 
 
+@ARTICLE{SurfaceNormals2019,
+  author={D. {Baráth} and I. {Eichhardt} and L. {Hajder}},
+  journal={IEEE Transactions on Image Processing}, 
+  title={Optimal Multi-View Surface Normal Estimation Using Affine Correspondences}, 
+  year={2019},
+  volume={28},
+  number={7},
+  pages={3301-3311}
+}
+  
 @inproceedings{FLANN2009,
   author = {Muja, Marius and Lowe, David G.},
   booktitle = {VISAPP},
@@ -138,6 +212,12 @@ booktitle = {ECCV}
   year={2019}
 }
 
+@inproceedings{OriNet2016,
+  author = {K. M. Yi and Y. Verdie and P. Fua and V. Lepetit},
+  title = {{Learning to Assign Orientations to Feature Points}},
+  booktitle = {CVPR},
+  year = {2016}
+}
 
 @inproceedings{revaud2019r2d2,
   title={R2d2: Repeatable and reliable detector and descriptor},
@@ -153,6 +233,14 @@ booktitle = {ECCV}
 	booktitle = {CVPR},
 	year = {2015}
 }
+
+@InProceedings{Hessian78,
+  Title                    = {{Rotationally invariant image operators}},
+  Author                   = {Beaudet, P. R.},
+  Booktitle                = {{Proceedings of the 4th International Joint Conference on Pattern Recognition}},
+  Year                     = {1978}
+}
+
 
 @InProceedings{TFeat2016,
   author    = {Vassileios Balntas and Edgar Riba and Daniel Ponsa and Krystian Mikolajczyk},
@@ -306,6 +394,13 @@ year={2020}
   year = {2002}
 }
 
+@INPROCEEDINGS{PerdochRetrieval2009,
+  author={M. {Perd'och} and O. {Chum} and J. {Matas}},
+  booktitle={CVPR}, 
+  title={Efficient representation of local geometry for large scale object retrieval}, 
+  year={2009}
+}
+
 @inproceedings{MikoDescEval2003,
   author = {K. Mikolajczyk and C. Schmid},
   title = {{A Performance Evaluation of Local Descriptors}},
@@ -313,6 +408,13 @@ year={2020}
   pages = "257--263",
   month = "June",
   year = {2003}
+}
+
+@inproceedings{AffNet2018,
+  author = {D. Mishkin and F. Radenovic and J. Matas},
+  title = {{Repeatability is Not Enough: Learning Affine Regions via Discriminability}},
+  booktitle = {ECCV},
+  year = {2018}
 }
 
 @article{Mikolajczyk05,
@@ -433,6 +535,14 @@ journal = {ToG},
 pages = {835–846},
 }
 
+@inproceedings{Harris88,
+  author = {C.G. Harris and M.J. Stephens},
+  title = {{A Combined Corner and Edge Detector}},
+  booktitle = {Fourth Alvey Vision Conference},
+  year = 1988
+}
+
+
 @inproceedings{COLMAP2016,
   author = {J.L. Sch\"{o}nberger and J.M. Frahm},
   title = {{Structure-From-Motion Revisited}},
@@ -448,6 +558,13 @@ pages = {835–846},
   number = "5",
   pages = "1147--1163",
   year = "2015"
+}
+
+@inproceedings{ORB2011,
+  author = {E. Rublee and V. Rabaud and K. Konolidge and G. Bradski},
+  title = {{ORB: An Efficient Alternative to SIFT or SURF}},
+  booktitle = {ICCV},
+  year = {2011}
 }
 
 @INPROCEEDINGS{PTAM2007,
