--- a/_notebooks/2020-07-17-affine-correspondences.ipynb
+++ b/_notebooks/2020-07-17-affine-correspondences.ipynb
@@ -75,7 +75,7 @@
     "\n",
     "![](2020-07-17-affine-correspondences_files/att_00011.png \"Test – Stereo results with 8k features. We report: NF --  Number of Features; NI -- Number of Inliers produced by RANSAC; and mAA@10°.\")\n",
     "\n",
-    "Therefore, if the only benefit of local features would be to only improve descriptor extraction stage, it would be arguably not worth it. Luckily, there are more benefit, which are more pronounced.\n"
+    "Therefore, if the only benefit of local features would be to only improve descriptor extraction stage, it would be arguably not worth it. Luckily, there are more benefits, which are more pronounced.\n"
    ]
   },
   {
@@ -88,7 +88,7 @@
     "\n",
     "1. Randomly sample a minimally required number of tentative correspondences to fit the geometrical model of the scene: 4 for homography, 7 for epipolar geometry and estimate the model.\n",
     "2. Calculate \"support\": other correspondeces, which are consistent with the model. \n",
-    "3. Repeat steps (1), (2) and outputs the model, supported with the most of correspondences. If you were lucky and have sampled all-inlier sample, meaning that all correspondences used to estimate the model were correct, you would have a correct model.\n",
+    "3. Repeat steps (1), (2) and output the model which is supported with the most of correspondences. If you were lucky and have sampled all-inlier sample, meaning that all correspondences used to estimate the model were correct, you would have a correct model.\n",
     "\n",
     "\n",
     "Reality is more complicated than I have just described, but the principle is the same. \n",
@@ -99,7 +99,7 @@
     "N = \\frac{\\log{(1 - p)}}{\\log{(1 - \\nu^{m})}}\n",
     "\\end{equation}\n",
     "\n",
-    "Lets plot the how the number of required samples changes with inlier ratio for confidence equal 99%. Note the log scale on Y axis."
+    "Lets plot the how the number of required samples changes with inlier ratio for confidence equal 99%. Note the log scale on Y axis. Different lines are for different minimal sample size **m**."
    ]
   },
   {
@@ -121,7 +121,7 @@
    "metadata": {},
    "source": [
     "As you can see from the plot above, reducing the minimal sample size required for the model estimation even by 1 saves and order of magnitude of computation. \n",
-    "In reality the benefit is a smaller, as modern RANSACs like GC-RANSAC and MAGSAC could estimate the correct model from the sample containing outliers, but it is still huge, especially for low inlier rate cases.\n",
+    "In reality the benefit is a smaller, as modern RANSACs like GC-RANSAC\\cite{gcransac2018} and MAGSAC\\cite{magsac2019} could estimate the correct model from the sample containing outliers, but it is still huge, especially for low inlier rate cases.\n",
     "\n",
     "\n",
     "### Image retrieval\n",
@@ -142,11 +142,11 @@
     "### Back to wide baseline stereo\n",
     "\n",
     "While working for spatial re-ranking, 3-degrees of freedom camera model is too rough for the wide baseline stereo.\n",
-    "Yet, going from 4 point correspondences (PC) to 2 affine correspondences (AC) for homogaphy and from 7 PC to 3 AC would be huge benefit anyway for the robust model estimation. \n",
+    "Yet, going from 4 point correspondences (PC) to 2 affine correspondences (AC) for homogaphy and from 7 PC to 3 AC for the fundamental matrix would be huge benefit anyway for the robust model estimation. \n",
     "\n",
     "Various variant of RANSAC working for local features were proposed in the last 15 years: Perdoch et.al\\cite{perd2006epipolar}, Pritts et.al.\\cite{PrittsRANSAC2013}, Barath and Kukelova \\cite{Barath2019ICCV}, Rodríguez et.al\\cite{RANSACAffine2020}.\n",
     "\n",
-    "Finally, the systematic study of using is presented by Barath et.al\\cite{barath2020making}. They that if use naively, affine correspondence lead to worse results, because they are more noisy than point correspondences. \n",
+    "Finally, the systematic study of using is presented by Barath et.al\\cite{barath2020making} in \"Making Affine Correspondences Work in Camera Geometry Computation\" paper. Authors show that if used naively, affine correspondence lead to worse results, because they are more noisy than point correspondences. \n",
     "However, there is a bag of tricks presented in the paper, which allow to solve the noise issue and make the affine RANSAC working in practice, resulting in orders of magnitude faster computation.\n",
     "\n",
     "![](2020-07-17-affine-correspondences_files/att_00013.png \"Figure from Making Affine Correspondences Work in Camera Geometry Computation\")"
@@ -158,7 +158,7 @@
    "source": [
     "## Application-specific benefits\n",
     "\n",
-    "Beside the wide baseline stereo, local affine features and correspondences have other applications. I will briefly describe some of them here (to be updated).\n",
+    "Besides the wide baseline stereo, local affine features and correspondences have other applications. I will briefly describe some of them here (to be updated).\n",
     "\n",
     "### Image rectification\n",
     "\n",
@@ -220,6 +220,10 @@
     "[<a id=\"cit-PerdochRetrieval2009\" href=\"#call-PerdochRetrieval2009\">PerdochRetrieval2009</a>] M. {Perd'och}, O. {Chum} and J. {Matas}, ``_Efficient representation of local geometry for large scale object retrieval_'', CVPR,  2009.\n",
     "\n",
     "[<a id=\"cit-IMW2020\" href=\"#call-IMW2020\">IMW2020</a>] Jin Yuhe, Mishkin Dmytro, Mishchuk Anastasiia <em>et al.</em>, ``_Image Matching across Wide Baselines: From Paper to Practice_'', arXiv preprint arXiv:2003.01587, vol. , number , pp. ,  2020.\n",
+    "\n",
+    "[<a id=\"cit-gcransac2018\" href=\"#call-gcransac2018\">gcransac2018</a>] D. Barath and J. Matas, ``_Graph-Cut RANSAC_'', The IEEE Conference on Computer Vision and Pattern Recognition (CVPR),  2018.\n",
+    "\n",
+    "[<a id=\"cit-magsac2019\" href=\"#call-magsac2019\">magsac2019</a>] J.N. Daniel Barath, ``_MAGSAC: marginalizing sample consensus_'', CVPR,  2019.\n",
     "\n",
     "[<a id=\"cit-Philbin07\" href=\"#call-Philbin07\">Philbin07</a>] J. Philbin, O. Chum, M. Isard <em>et al.</em>, ``_Object Retrieval with Large Vocabularies and Fast Spatial Matching_'', CVPR,  2007.\n",
     "\n",
