--- a/_notebooks/biblio.bib
+++ b/_notebooks/biblio.bib
@@ -16,16 +16,37 @@ year="1998",
 pages="78--92",
 }
 
-@ARTICLE{sGLOH2,
-  author={F. {Bellavia} and C. {Colombo}},
-  journal={IEEE Transactions on Pattern Analysis and Machine Intelligence}, 
-  title={Rethinking the sGLOH Descriptor}, 
-  year={2018},
-  volume={40},
-  number={4},
+@ARTICLE{sGLOH2,
+
+  author={F. {Bellavia} and C. {Colombo}},
+
+  journal={IEEE Transactions on Pattern Analysis and Machine Intelligence}, 
+
+  title={Rethinking the sGLOH Descriptor}, 
+
+  year={2018},
+
+  volume={40},
+
+  number={4},
+
   pages={931-944}
 }
  
+@InProceedings{gcransac2018,
+author = {Barath, Daniel and Matas, Jiří},
+title = {Graph-Cut RANSAC},
+booktitle = {The IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
+year = {2018}
+}
+
+@InProceedings{magsac2019,
+    title = {{MAGSAC: marginalizing sample consensus}},
+    author = {Daniel Barath, Jiri Matas, Jana Noskova},
+    booktitle = {CVPR},
+    year = {2019}
+}
+
  
  @article{IMW2020,
   title={Image Matching across Wide Baselines: From Paper to Practice},
@@ -34,13 +55,20 @@ pages="78--92",
   year={2020}
 }
 
-@ARTICLE{RIFT2005,
-  author={S. {Lazebnik} and C. {Schmid} and J. {Ponce}},
-  journal={IEEE Transactions on Pattern Analysis and Machine Intelligence}, 
-  title={A sparse texture representation using local affine regions}, 
-  year={2005},
-  volume={27},
-  number={8},
+@ARTICLE{RIFT2005,
+
+  author={S. {Lazebnik} and C. {Schmid} and J. {Ponce}},
+
+  journal={IEEE Transactions on Pattern Analysis and Machine Intelligence}, 
+
+  title={A sparse texture representation using local affine regions}, 
+
+  year={2005},
+
+  volume={27},
+
+  number={8},
+
   pages={1265-1278}
 }
   
@@ -76,10 +104,14 @@ year={1996}
   year={2006}
 }
 
-@INPROCEEDINGS{PrittsRANSAC2013,
-  author={J. {Pritts} and O. {Chum} and J. {Matas}},
-  booktitle={2013 28th International Conference on Image and Vision Computing New Zealand (IVCNZ 2013)}, 
-  title={Approximate models for fast and accurate epipolar geometry estimation}, 
+@INPROCEEDINGS{PrittsRANSAC2013,
+
+  author={J. {Pritts} and O. {Chum} and J. {Matas}},
+
+  booktitle={2013 28th International Conference on Image and Vision Computing New Zealand (IVCNZ 2013)}, 
+
+  title={Approximate models for fast and accurate epipolar geometry estimation}, 
+
   year={2013}}
   
   
@@ -89,11 +121,16 @@ title = {Homography From Two Orientation- and Scale-Covariant Features},
 booktitle = {ICCV},
 year = {2019}
 }
-@INPROCEEDINGS{RANSACAffine2020,
-  author={M. {Rodríguez} and G. {Facciolo} and R. G. {von Gioi} and P. {Musé} and J. {Delon}},
-  booktitle={2020 IEEE Winter Conference on Applications of Computer Vision (WACV)}, 
-  title={Robust estimation of local affine maps and its applications to image matching}, 
-  year={2020}
+@INPROCEEDINGS{RANSACAffine2020,
+
+  author={M. {Rodríguez} and G. {Facciolo} and R. G. {von Gioi} and P. {Musé} and J. {Delon}},
+
+  booktitle={2020 IEEE Winter Conference on Applications of Computer Vision (WACV)}, 
+
+  title={Robust estimation of local affine maps and its applications to image matching}, 
+
+  year={2020}
+
 }
   
   
@@ -120,13 +157,20 @@ url={https://hal.inria.fr/file/index/docid/74046/filename/RR-2644.pdf}
 }
 
 
-@ARTICLE{SurfaceNormals2019,
-  author={D. {Baráth} and I. {Eichhardt} and L. {Hajder}},
-  journal={IEEE Transactions on Image Processing}, 
-  title={Optimal Multi-View Surface Normal Estimation Using Affine Correspondences}, 
-  year={2019},
-  volume={28},
-  number={7},
+@ARTICLE{SurfaceNormals2019,
+
+  author={D. {Baráth} and I. {Eichhardt} and L. {Hajder}},
+
+  journal={IEEE Transactions on Image Processing}, 
+
+  title={Optimal Multi-View Surface Normal Estimation Using Affine Correspondences}, 
+
+  year={2019},
+
+  volume={28},
+
+  number={7},
+
   pages={3301-3311}
 }
   
