Patch extraction post

--- a/_notebooks/biblio.bib
+++ b/_notebooks/biblio.bib
@@ -16,6 +16,15 @@ year="1998",
 pages="78--92",
 }
 
+@inproceedings{PatchExtraction2014,
+  title={A few things one should know about feature extraction, description and matching},
+  author={Lenc, Karel and Matas, Jir{\i} and Mishkin, Dmytro},
+  booktitle={Proceedings of the Computer Vision Winter Workshop},
+  pages={67--74},
+  year={2014}
+}
+
+
 @ARTICLE{sGLOH2,
 
   author={F. {Bellavia} and C. {Colombo}},
