added 2 more examples to the affine features motivation

--- a/_notebooks/2020-07-17-affine-correspondences.ipynb
+++ b/_notebooks/2020-07-17-affine-correspondences.ipynb
@@ -149,7 +149,18 @@
     "Finally, the systematic study of using is presented by Barath et.al\\cite{barath2020making} in \"Making Affine Correspondences Work in Camera Geometry Computation\" paper. Authors show that if used naively, affine correspondence lead to worse results, because they are more noisy than point correspondences. \n",
     "However, there is a bag of tricks presented in the paper, which allow to solve the noise issue and make the affine RANSAC working in practice, resulting in orders of magnitude faster computation.\n",
     "\n",
-    "![](2020-07-17-affine-correspondences_files/att_00013.png \"Figure from Making Affine Correspondences Work in Camera Geometry Computation\")"
+    "![](2020-07-17-affine-correspondences_files/att_00013.png \"Figure from Making Affine Correspondences Work in Camera Geometry Computation\")\n",
+    "\n",
+    "Moreover, for a special cases like autonomous driving, where the motion is mostly horizonal, one could even use 2 affine correspondes for both motion estimation and consistency check, significantly improving the efficiency of the outliers removal compared to the standard RANSAC loop\\cite{guan2020relative}. \n",
+    "\n",
+    "![](2020-07-17-affine-correspondences_files/att_00001.png \"Empirical cumulative error distributions for KITTI sequence 00. Figure from Relative Pose Estimation for Multi-Camera Systems from Affine Correspondences.\")\n",
+    "\n",
+    "Besides the special case considerations, additional contraints can also come from running other algorithms, like monocular depth estimation. Such a constraint could reduce the required number of matches from two affine correspondences to a single one for calibrated camera case\\cite{OneACMonoDepth2020}.\n",
+    "\n",
+    "![](2020-07-17-affine-correspondences_files/att_00002.png \"Figure from Relative Pose from Deep Learned Depth and a Single Affine Correspondence\")\n",
+    "\n",
+    "\n",
+    "![](2020-07-17-affine-correspondences_files/att_00003.png \"Figure from Relative Pose from Deep Learned Depth and a Single Affine Correspondence\")"
    ]
   },
   {
@@ -236,6 +247,10 @@
     "[<a id=\"cit-RANSACAffine2020\" href=\"#call-RANSACAffine2020\">RANSACAffine2020</a>] M. {Rodríguez}, G. {Facciolo}, R. G. <em>et al.</em>, ``_Robust estimation of local affine maps and its applications to image matching_'', 2020 IEEE Winter Conference on Applications of Computer Vision (WACV),  2020.\n",
     "\n",
     "[<a id=\"cit-barath2020making\" href=\"#call-barath2020making\">barath2020making</a>] Barath Daniel, Polic Michal, Förstner Wolfgang <em>et al.</em>, ``_Making Affine Correspondences Work in Camera Geometry Computation_'', arXiv preprint arXiv:2007.10032, vol. , number , pp. ,  2020.\n",
+    "\n",
+    "[<a id=\"cit-guan2020relative\" href=\"#call-guan2020relative\">guan2020relative</a>] Guan Banglei, Zhao Ji, Barath Daniel <em>et al.</em>, ``_Relative Pose Estimation for Multi-Camera Systems from Affine Correspondences_'', arXiv preprint arXiv:2007.10700, vol. , number , pp. ,  2020.\n",
+    "\n",
+    "[<a id=\"cit-OneACMonoDepth2020\" href=\"#call-OneACMonoDepth2020\">OneACMonoDepth2020</a>] D.B. Ivan Eichhardt, ``_Relative Pose from Deep Learned Depth and a Single Affine Correspondence_'', ECCV,  2020.\n",
     "\n",
     "[<a id=\"cit-SurfaceNormals2019\" href=\"#call-SurfaceNormals2019\">SurfaceNormals2019</a>] {Baráth} D., {Eichhardt} I. and {Hajder} L., ``_Optimal Multi-View Surface Normal Estimation Using Affine Correspondences_'', IEEE Transactions on Image Processing, vol. 28, number 7, pp. 3301-3311,  2019.\n",
     "\n"
