--- a/_notebooks/biblio.bib
+++ b/_notebooks/biblio.bib
@@ -49,6 +49,16 @@ booktitle = {The IEEE Conference on Computer Vision and Pattern Recognition (CVP
 year = {2018}
 }
 
+
+@InProceedings{OneACMonoDepth2020,
+    title = {Relative Pose from Deep Learned Depth and a Single Affine Correspondence},
+    author = {Ivan Eichhardt, Daniel Barath},
+    booktitle = {ECCV},
+    year = {2020}
+}
+
+
+
 @InProceedings{magsac2019,
     title = {{MAGSAC: marginalizing sample consensus}},
     author = {Daniel Barath, Jiri Matas, Jana Noskova},
@@ -56,12 +66,22 @@ year = {2018}
     year = {2019}
 }
 
- 
+
+
  @article{IMW2020,
   title={Image Matching across Wide Baselines: From Paper to Practice},
   author={Jin, Yuhe and Mishkin, Dmytro and Mishchuk, Anastasiia and Matas, Jiri and Fua, Pascal and Yi, Kwang Moo and Trulls, Eduard},
   journal={arXiv preprint arXiv:2003.01587},
   year={2020}
+}
+
+
+@article{guan2020relative,
+    title={Relative Pose Estimation for Multi-Camera Systems from Affine Correspondences},
+    author={Banglei Guan and Ji Zhao and Daniel Barath and Friedrich Fraundorfer},
+    year={2020},
+ journal={arXiv preprint arXiv:2007.10700}
+ 
 }
 
 @ARTICLE{RIFT2005,
