--- a/_notebooks/2020-07-17-affine-correspondences.ipynb
+++ b/_notebooks/2020-07-17-affine-correspondences.ipynb
@@ -27,16 +27,16 @@
     "\n",
     "Specifically, detectors like DoG\\cite{Lowe99}, Harris\\cite{Harris88}, Hessian\\cite{Hessian78}, KeyNet\\cite{KeyNet2019}, ORB\\cite{ORB2011}, and many others rate on scale-space provide at least 3 parameters: x, y, and scale.  \n",
     "\n",
-    "The most of the local descriptors  -- SIFT\\cite{Lowe99}, HardNet\\cite{HardNet2017} and so on -- are not rotation invariant and those which are - mostly require complex matching function\\cite{RIFT2005}, \\cite{sGLOH2}, so we have to estimamate a patch orientation in order to match reliably. This can be done by various methods:\n",
-    "corners center of mass (ORB\\cite{ORB2011}, dominant gradient orientation (SIFT)\\cite{Lowe99} or by some learned estimator (OriNets\\cite{OriNet2016},\\cite{AffNet2018}). Another way is to rely on smartphone camera IMU or photographer and assume that images are upright\\cite{PerdochRetrieval2009}.\n",
+    "Most of the local descriptors  -- SIFT\\cite{Lowe99}, HardNet\\cite{HardNet2017} and so on -- are not rotation invariant and those which are - mostly require complex matching function\\cite{RIFT2005}, \\cite{sGLOH2}, so the patch orientation has to be estimated anyway, in order to match reliably. This can be done by various methods:\n",
+    "corners center of mass (ORB\\cite{ORB2011}, dominant gradient orientation (SIFT)\\cite{Lowe99} or by some learned estimator (OriNets\\cite{OriNet2016},\\cite{AffNet2018}). Sometimes it is possible to rely on smartphone camera IMU or photographer and assume that images are upright\\cite{PerdochRetrieval2009}.\n",
     "\n",
-    "Thus, we can assume that if local descriptors match, this means that local feature scale and orientation also match, at least approximately -- see Figure below. Possible exceptions are cases, when the patch is symmetrical and orientation is ambiguous up to some symmetry group.\n",
+    "Thus, we can assume that if local descriptors match, this means the local feature scale and orientation also match, at least approximately -- see Figure below. Possible exceptions are cases, when the patch is symmetrical and orientation is ambiguous up to some symmetry group.\n",
     "\n",
     "\n",
     "![](2020-07-17-affine-correspondences_files/matches_patches.png \"Selected matching SIFT keypoints and corresponding patches. One can see that not only patch centers correspond to each other, but also other pixels, although less precise. Image pair from Sacre Coeur IMW dataset.\")\n",
     "\n",
     "\n",
-    "In addition, one could assume that we observe the patch not from the fronto-parallel position and try to estimate local normal, or, more precisely, affine shape of the feature point, modeling it as an ellipse instead of circle. One could also think of affine shape estimation as finding the camera position, from where the patch is seen in some \"canonical\", fronto-parallel view.\n",
+    "In addition, one could assume that we observe the patch not from the fronto-parallel position and try to estimate local normal, or, more precisely, affine shape of the feature point, modeling it as an ellipse instead of circle. One could also think of affine shape estimation as finding the camera position, from where the patch is seen in some \"canonical\" view.\n",
     "\n",
     "![](2020-07-17-affine-correspondences_files/affinematches_patches.png \"Selected matching SIFT-AffNet keypoints and corresponding patches. One can see that not only patch centers correspond to each other, but also other pixels, although less precise. Image pair from Sacre Coeur IMW dataset.\")\n",
     "\n",
@@ -63,7 +63,7 @@
    "source": [
     "## Making descriptor job easier\n",
     "\n",
-    "The most straightforward benefit of using local affine features is that they increase the repeatability of the detector and potentially cancel out the most of viewpoint difference local patches. This makes possible matching more challenging image pairs.\n",
+    "The most straightforward benefit of using local affine features is that they increase the repeatability of the detector and potentially reduce appearance changes of a local patch caused by viewpoint difference. This makes possible matching more challenging image pairs.\n",
     "\n",
     "![](2020-07-17-affine-correspondences_files/test.png \"Hessian features + HardNet matches + RANSAC inliers, Right: HessAffNet features + HardNet matches + RANSAC inliers. Image pair from Tanks & Temples. Epipolar lines are shown in cyan.\")\n",
     "\n",
@@ -71,11 +71,11 @@
     "![](2020-07-17-affine-correspondences_files/att_00009.png \"Repeatability and the number of correspondences. AffNet compared with the de facto standard Baumberg iteration according to the Mikolajczyk protocol. Left – images with illumination differences, right – with viewpoint and scale changes. SS – patch from the scale-space pyramid at the level of the detection, image – from the original image; 19 and 33 are patch sizes.\") \n",
     "\n",
     "\n",
-    "The practice is a little bit more complicated. Our recent benchmark\\cite{IMW2020}, which measure the accuracy of the outputed fundamental matrix, shows that the difference in using affine and similarity-covariant features is quite minor. Specifically, the relative difference between SIFT vs SIFT-Affine features is 0.5% and between Hessian-SIFT and Hessian-AffNet SIFT is 5.1%, see Table below.\n",
+    "The practice is a little bit more complicated. Our recent benchmark\\cite{IMW2020}, which measure the accuracy of the output fundamental matrix, shows that the difference in using affine and similarity-covariant features is quite minor. Specifically, the relative difference between SIFT vs SIFT-Affine features is 0.5% and between Hessian-SIFT and Hessian-AffNet SIFT is 5.1%, see Table below.\n",
     "\n",
     "![](2020-07-17-affine-correspondences_files/att_00011.png \"Test – Stereo results with 8k features. We report: NF --  Number of Features; NI -- Number of Inliers produced by RANSAC; and mAA@10°.\")\n",
     "\n",
-    "Therefore, if the only benefit of local features would be to only improve descriptor extraction stage, it would be arguably not worth it. Luckily, there are more benefits, which are more pronounced.\n"
+    "Therefore, if the benefit of local features would be to only improve descriptor extraction stage, it would be arguably not worth it. Luckily, there are more benefits, which are more pronounced.\n"
    ]
   },
   {
@@ -125,12 +125,12 @@
     "\n",
     "\n",
     "### Image retrieval\n",
-    "The ideal case would be to estimate model from just a single sample and that is exactly what is done in spatial reranking paper \"**Object retrieval with large vocabularies and fast spatial matching**\"  by Philbin et.al \\cite{Philbin07}.\n",
+    "The ideal case would be to estimate a model from just a single sample and that is exactly what is done in spatial reranking paper \"**Object retrieval with large vocabularies and fast spatial matching**\"  by Philbin et.al \\cite{Philbin07}.\n",
     "\n",
-    "Specifically, they are solving an particular object retrieval problem: given an image containing some object, return all the images from the database, which also containg the same object.\n",
+    "Specifically, they are solving a particular object retrieval problem: given an image containing some object, return all the images from the database, which also containg the same object.\n",
     "\n",
     "The inital list of images is formed by the descriptor distance and then is reranked.\n",
-    "Authors propose to approximate a perspective change between two images as an affine image transformation, and count number of feature points, which are reprojected inside the second image. This number produces better ranking that the original short-list. \n",
+    "The authors propose to approximate a perspective change between two images as an affine image transformation, and count number of feature points, which are reprojected inside the second image. This number produces better ranking that the original short-list. \n",
     "\n",
     "![](2020-07-17-affine-correspondences_files/att_00012.png \"Figure from  Philbin et.al\")"
    ]
