Added post about view synthesis and MODS

--- a/_notebooks/biblio.bib
+++ b/_notebooks/biblio.bib
@@ -25,6 +25,52 @@ pages="78--92",
 }
 
 
+@InProceedings{SingleImage3dRec2015,
+author = {Schonberger, Johannes L. and Radenovic, Filip and Chum, Ondrej and Frahm, Jan-Michael},
+title = {From Single Image Query to Detailed 3D Reconstruction},
+booktitle = {Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
+month = {June},
+year = {2015}
+}
+
+
+@article{LostInPast2015,
+title = "Location recognition over large time lags",
+journal = "Computer Vision and Image Understanding",
+volume = "139",
+year = "2015",
+author = "Basura Fernando and Tatiana Tommasi and Tinne Tuytelaars"
+}
+
+@Article{AffineTree2006,
+  Title                    = {Keypoint Recognition Using Randomized Trees},
+  Author                   = {Lepetit, Vincent and Fua, Pascal},
+  Journal                  = {IEEE Trans. Pattern Anal. Mach. Intell.},
+  Year                     = {2006},
+  Month                    = {sep},
+  Number                   = {9},
+  Volume                   = {28}
+}
+
+@Article{ASIFT2009,
+  Title                    = {ASIFT: A New Framework for Fully Affine Invariant Image Comparison},
+  Author                   = {Morel, Jean-Michel and Yu, Guoshen},
+  Journal                  = {SIAM J. Img. Sci.},
+  Year                     = {2009},
+  Month                    = {apr},
+  Number                   = {2},
+  Volume                   = {2}
+}
+
+@article{FastASIFT2018,
+    title   = {{Fast Affine Invariant Image Matching}},
+    author  = {Rodríguez, Mariano and Delon, Julie and Morel, Jean-Michel},
+    journal = {{Image Processing On Line}},
+    volume  = {8},
+    year    = {2018}
+}
+
+
 @ARTICLE{sGLOH2,
 
   author={F. {Bellavia} and C. {Colombo}},
@@ -66,6 +112,14 @@ year = {2018}
     year = {2019}
 }
 
+
+@InProceedings{MSER2002,
+  Title                    = {Robust Wide Baseline Stereo from Maximally Stable Extrema Regions},
+  Author                   = {J. Matas and O. Chum and M. Urban and T. Pajdla},
+  Booktitle                = {BMVC},
+  Year                     = {2002},
+  Pages                    = {384--393}
+}
 
 
  @article{IMW2020,
@@ -124,6 +178,12 @@ booktitle={ECCV},
 year={1996}
 }
 
+@article{MODS2015,
+      title = "MODS: Fast and robust method for two-view matching ",
+      journal = "Computer Vision and Image Understanding ",
+      year = "2015",
+       author = "Dmytro Mishkin and Jiri Matas and Michal Perdoch"
+}
 
 
 @inproceedings{perd2006epipolar,
