--- a/_notebooks/2020-08-06-affine-view-synthesis.ipynb
+++ b/_notebooks/2020-08-06-affine-view-synthesis.ipynb
@@ -22,7 +22,7 @@
     "### In this post\n",
     "\n",
     "1. What to do, if you are in a desperate need of matching this particular image pair?\n",
-    "2. What are the limitation of the affine-covariant detectors like Hessian-Affine or HesAffNet?\n",
+    "2. What are the limitations of the affine-covariant detectors like Hessian-Affine or HesAffNet?\n",
     "3. ASIFT: brute-force affine view synthesis\n",
     "4. Do as little as possible: MODS\n",
     "5. What is the key factor of affine view synthesis? Ablation study"
@@ -87,7 +87,7 @@
     "\n",
     "![image.png](2020-08-04-affine-view-synthesis_files/att_00009.png \"ASIFT find a lot of correspondences on challenging pair. Figure from ASIFT: An Algorithm for Fully Affine Invariant Comparison\")\n",
     "\n",
-    "In this section I have used use great illustrations done by [Mariano Rodríguez](https://rdguez-mariano.github.io/) for his paper \"Fast Affine Invariant Image Matching\" \\cite{FastASIFT2018}. Please, checkout his [blog](https://rdguez-mariano.github.io/). "
+    "In this section I have used great illustrations done by [Mariano Rodríguez](https://rdguez-mariano.github.io/) for his paper \"Fast Affine Invariant Image Matching\" \\cite{FastASIFT2018}. Please, checkout his [blog](https://rdguez-mariano.github.io/). "
    ]
   },
   {
