--- a/_notebooks/2020-07-09-wxbs.ipynb
+++ b/_notebooks/2020-07-09-wxbs.ipynb
@@ -21,27 +21,24 @@
    "source": [
     "### Definition of WxBS\n",
     "\n",
-    "Let us denote $ X_{i} $  a set of objects in 3D space (or 4D for space-time). \n",
+    "Let us denote observations $O_{i}, i=1..n$, each of which belongs to one of the views $V_{j}, i=1..m$, $m \\leq n$. \n",
+    "Observations can be, for example, pixels and views are images, respectfully. Observations and views can be of different nature and dimentionality. E.g. $V_1$, $V_2$  - RGB images, $V_3$ - point cloud from a laser scaner, $V_4$ - image from a thermal camera, and so on. \n",
     "\n",
-    "Let $O_{j}^{i}$ the observation of object $X_i$. \n",
-    "Then the set $C_{i}$ of observations $O_{j}^{i}$ of the same object $X_i$ is called a **true correspondence set**. The set can be empty if no observation of the specific object is made. The element of the $C_i$, $c_{i}^{jk}$ is called a **true correspondence** between observation $ O_{j} $ and $O_{k}$ if and only if $O_{j}$ and $O_{k}$ are the observation of the same object $X_i$.\n",
+    "We will call two of observations $(O_{i},O_{k})$, a correspondence $c_{ik}$ if they are belong to different views $V_{j}$. The group of observations is called correspondence set $C_o$, when there is exactly one observation $O_i$ per view $V_j$ inside, some of observations $O_i$ can be empty $\\varnothing$, i.e. not observed in the specific view $V_j$. Multiple correspondences are called consistent if they form a correspondence set.\n",
     "\n",
-    "We would also call the correspondence as $c_{jk}$ as \"consistent, but incorrect\" if $O_{j}$ and $O_{k}$ are the observation of the same object $X_i$, but are wrongly attributed to the other object $X_z$.\n",
+    "We can now define a wide baseline stereo. \n",
     "\n",
-    "Let us give a couple of examples. The object $X$ is the single CAD model of the car and the observations $O_{j}$ are its blueprints, e.g. 2D projections to the top, front and side views. All the observations form the correspondence set $C$.\n",
+    "By **wide baseline stereo** we understand the process of establishing correspondence sets \\(C_o\\) from observations \\(O_i\\) and images $V_{j}$ under the following constraints:\n",
+    "- images \\(V_j\\) belong to camera planes taken by cameras \\(K_j\\) of the same static rigid scene \\(S\\). \n",
     "\n",
-    "Another example, which is commonly used in the current thesis is the a little bit different. The objects $X_i$ are the cars, but their parts, or, even more fine-grained are 3d coordinates of some point on object surface in real world. Then the observations $O_{j}^{i}$ are their 2d projections to the camera plane, i.e. pixels. The correspondence might be multimodal, as observation $O_{j}^{i}$  might have different nature: RGB image, depth map D, infra-red thermal image, LIDAR-scan or even painting.\n",
+    "In addition to recovering the correspondence sets wide baseline stereo process also recovers (unknown) camera poses \\(K_i\\), \\(K_j\\), \\(K_k\\). \n",
     "\n",
-    "For example, on image below the object $X_i$ is red circle, observation are blue circles and the correspondences $c_{jk}$ are shown as lines. \n",
+    "By \"rigid\" we mean that the only \"motion\" possible is the pose difference of the cameras, which is called \"baseline\" for the case where there are only two cameras. \n",
+    "We could also assume some scene structure or model, consisting of latent objects $X_i$, which we are could only observe. \n",
+    "\n",
+    "For example, on image below, observations $O_i$ are blue circles and the correspondences $c_{jk}$ are shown as lines. The assumed object $X_i$ is a red circle.\n",
     "\n",
     "![](imgs/WxBS_house.jpeg \"Example of multimodal wide baseline stereo\")\n",
-    "\n",
-    "Observations do not have to be the down-projections: one could think of observations $O_{j}$ as points in 3d point cloud. And the correspondences would connect two point cloud models of the same object. \n",
-    "\n",
-    "\n",
-    "By \"**wide baseline stereo**\" we understand the process of establishing correspondences $c_{jk}$ and correspondence sets $C_i^{jk}$ from observations $O_j$ under the following constraints: observations $O_j$ belong to different views (camera planes) $V_i$, $V_j$, $V_k$ taken by cameras $K_i$, $K_j$, $K_k$ of the same static rigid scene $S$. In addition to recovering the correspondence set wide baseline stereo process also recovers (unknown) camera poses $K_i$, $K_j$, $K_k$.\n",
-    "\n",
-    "By \"rigid\" we mean that all the parts (objects) $X_i$ do not change their 3d world coordinates and the only \"motion\" possible is the pose difference of the cameras, which is called \"baseline\" for the case where there are only two cameras. Any moving object is considered to be an occlusion and not the part of the scene. \n",
     "\n",
     "We will call \"**wide multiple baseline stereo**\" or **WxBS** \\cite{Mishkin2015WXBS} if the observations have different nature or the conditions under which observation were made are different. \n",
     "\n",
@@ -49,10 +46,9 @@
     "\n",
     "In contrast, in  **wide baseline stereo** the baseline is unknown, mostly unconstrained and the viewpoints of the cameras can vary drastically.\n",
     " \n",
-    "The wide baseline stereo, which also outputs the estimation of $X_i$ in form of 3d world coordinates we would call \"**rigid structure-from-motion**\" (rigid SfM) or \"**3D reconstruction**\". We do not consider object shape approximation with voxels, meshes, etc in the current thesis. Nor we consider the recovery of scene albedo, illumination, and other appearance properties. \n",
+    "The wide baseline stereo, which also outputs the estimation of the latent objects, e.g. in form of 3d point world coordinates we would call **rigid structure-from-motion** (rigid SfM) or **3D reconstruction**. We do not consider object shape approximation with voxels, meshes, etc in the current thesis. Nor we consider the recovery of scene albedo, illumination, and other appearance properties. \n",
     "\n",
     "While the difference between **SfM** and **WBS** is often blurred and the terms are used interchangeably, we would  consider WBS as a part of SfM pipeline prior to recovering 3d point cloud.  \n",
-    "\n",
     "\n",
     "![](imgs/wxbs_problems.png \"Example of  WxBS problems\")"
    ]
